feat: 단위 테스트 추가
refactor: 메서드 명과 블랙잭 조건 확인해주는 코드 삽입